Change phone button top slider

--- a/style.css
+++ b/style.css
@@ -83,6 +83,75 @@ img {
   color: #3498db;
 }
 
+/******************************************/
+/*PHONE BUTTON */
+
+.center-button{
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  position: relative;
+  width: 190px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid #227ab4;
+  background-color: #3498db;
+  overflow: hidden;
+}
+
+.button, .button__icon, .button__text {
+  transition: all 0.6s;
+}
+
+.button .button__text {
+  transform: translateX(22px);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(133px);
+  height: 100%;
+  width: 50px;
+  background-color: #227ab4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button .button__icon i {
+  color: #ffffff;
+}
+
+.button:hover {
+  background: white;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 185px;
+
+  transform: translateX(0);
+}
+
+.button:active .button__icon {
+  background-color: #ffffff;
+}
+
+.button:active {
+  border: 1px solid #ffffff;
+}
+
+/*****************************************/
+
 .mu-readmore-btn {
   background-color: #fff;
   font-family: "Open Sans", sans-serif;
