--- a/style.css
+++ b/style.css
@@ -152,6 +152,18 @@ img {
 
 /*****************************************/
 
+/*****************************************/
+/* CLASS reward */
+
+.reward{
+  display: flex;
+  margin-top: 5rem;
+  align-items: center !important;
+  justify-content: center;
+}
+
+/*****************************************/
+
 .mu-readmore-btn {
   background-color: #fff;
   font-family: "Open Sans", sans-serif;
